[package]
name = "U_NetSafeGuard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "updater", "window-unminimize", "window-minimize", "window-maximize", "window-show", "window-unmaximize", "window-start-dragging", "window-hide", "process-relaunch", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tls-parser = "0.8.0"
md5 = "0.6"
itertools = "0.8"
x509-parser = "0.4"
log = "0.4.6"
nom = {version = "4.0", features= ["verbose-errors"] }
pcap-parser = "0.3"
clap = "~2.33"
pnet = "0.35.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
